# air-quality-predictor

./: .gitignore  backfill-feature-pipeline.py  batch-inference-pipeline.py  daily-feature-pipeline.py  dashboard.py  pyproject.toml  training-pipeline.py
data/: A149242.csv  A407335.csv  A58969.csv  A59656.csv  A61045.csv  A62566.csv  A82942.csv
workflows/: air-quality-daily.yml
