[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "hopsworks[python]==4.2.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openmeteo-requests>=1.7.4",
    "optuna>=4.6.0",
    "pandas<2.3.0",
    "plotly>=6.5.0",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.12.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "xgboost>=3.1.1",
]
